# otxlearner

./: .coveragerc  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  Prompt.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  scratchpad.md
.github/workflows/: ci.yml  docs.yml
bench/: harness.py
configs/: acic.yaml  base.yaml  ihdp.yaml  twins.yaml
docs/: extending.md  faq.md  index.md  quick_start.md  research_notes.md  theory.md  usage.md
docs/api/: index.md
examples/: README.md  acic_sweep_optuna.py  ihdp_basic.py  twins_uncertainty.py
notebooks/: 00_quickstart.ipynb  training_curves.ipynb
scripts/: ihdp_basic.py  twins_uncertainty.py
src/: __init__.py  evaluate.py  sweep.py  train.py
src/data/: __init__.py  ihdp.py  twins.py
src/models/: __init__.py  domain.py  flow.py  mlp.py  sinkhorn.py
src/otxlearner/: __init__.py  cli.py  evaluate.py  loops.py  registries.py  schedulers.py  sweep.py  train.py
src/otxlearner/data/: __init__.py  acic.py  criteo.py  ihdp.py  tabular.py  torch_adapter.py  twins.py  types.py  (+1 more)
src/utils/: __init__.py  metrics.py  propensity.py
tests/: conftest.py  test_acic_loader.py  test_base_trainer.py  test_dann_smoke.py  test_data_utils.py  test_domain_discriminator.py  test_flow.py  test_gradient_reversal.py  test_ihdp_loader.py  test_metrics.py  test_mlp.py  test_one_epoch.py  test_placeholder.py  test_propensity.py  test_registries.py  test_sinkhorn.py  test_sinkhorn_trainer.py  test_sweep.py  test_tabular_loader.py  test_train_smoke.py  test_twins_loader.py  test_unbalanced_sinkhorn.py
(+12 files in other folders)
