[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "otxlearner"
version = "0.2.0"
description = "Sinkhorn-penalised X-Net for causal inference"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.optional-dependencies]
docs = ["mkdocs-material", "mkdocstrings[python]", "mkdocs-autorefs"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["otxlearner"]
